testdata/zkc/invalid/cast_invalid_02.zkc
//error:3:7-14:expected type u4
fn f(x:u4) -> (r:u8) {
  r = x as u8
  return
}
